new branch for makeover with server/mongodb

--- a/todo-app-react-redux/public/index.html
+++ b/todo-app-react-redux/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500&family=Exo+2:wght@100;300;400&family=Jura:wght@300;500;700&family=Orbitron:wght@400;500&display=swap"
       rel="stylesheet"
     />
     <link
