more tailwind finished popout

--- a/client/index.html
+++ b/client/index.html
@@ -15,12 +15,17 @@
       href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500&family=Exo+2:wght@100;300;400&family=Jura:wght@300;500;700&family=Orbitron:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
+
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
+    <script
+      src="https://kit.fontawesome.com/b3cd848b13.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </body>
 </html>
