--- a/server/client/index.html
+++ b/server/client/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
 
-    <title>React App</title>
+    <title>Task-X</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
