updated html meta

--- a/server/client/index.html
+++ b/server/client/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Task-X"
+      content="Task-X: Create and manage tasks - interact with other users"
     />
     <link rel="manifest" href="/manifest.json" />
     <link
